# GoodNutritionBot

./: .env.exemple  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  run_test.sh
bot/: body_data.py  config_reader.py  count_function.py  keybord.py  main.py  patterns.py  set_commands.py  state.py
bot/api/: schemas.py
bot/api/actions/: reminder.py  user.py
bot/db/: crud.py  dals.py  dependency.py  pydantic_models.py  test.py
bot/handlers/: commands.py  meal.py  registration.py  reminder.py
business_card/: index.html
business_card/css/: style.css
business_card/js/: script.js
tests/: conftest.py
