[tool.poetry]
name = "goodnutritionbot"
version = "0.1.0"
description = ""
authors = ["AntonZimyanin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^4.5.5"
aiosqlite = "^0.19.0"
aiogram = "3.0.0b7"
pydantic = {extras = ["dotenv"], version = "^1.10.8"}
pre-commit = "^3.3.2"
yoyo-migrations = "^8.2.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
